# Spotify-TUI

./: Cargo.toml  README.md
src/: app.rs  auth.rs  main.rs  model.rs  poller.rs  spotify.rs  ui.rs
