[package]
name = "spotify-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13.2", features = ["json", "form"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ratatui = "0.30.0"
crossterm = "0.29.0"
rand = "0.10.1"
dotenvy = "0.15"
urlencoding = "2.1"
open = "5"
tiny_http = "0.12"
anyhow = "1.0"
